--- a/monzzle/introduction.html
+++ b/monzzle/introduction.html
@@ -10,40 +10,9 @@
     <link rel="stylesheet" href="css/allpage.css">
     <style>
         /* introduction */
-        .content-header {
-            justify-content: space-between;
-            border-bottom: 4px solid #513A35;
-        }
-
-        .content-header-icon {
-            width: 45px;
-            height: 45px;
-        }
-
         .content-header-left,
         .content-header-right {
             display: inline-block;
-        }
-
-        .content-header-right {
-            float: right;
-        }
-
-        .content-header-title {
-            font-size: 28px;
-            font-weight: bolder;
-            display: inline-block;
-            top: 5px;
-            position: relative;
-        }
-
-        .content-header-item {
-            display: inline-block;
-            font-size: 20px;
-            position: relative;
-            top: 14px;
-            text-decoration: underline;
-            font-weight: bolder;
         }
 
         .content-header-item-mgr {
@@ -73,11 +42,6 @@
             border: 0
         }
 
-        .member {
-            border-bottom: 4px solid #513A35;
-            padding-bottom: 20px;
-        }
-
         @media (max-width:560px) {
             .content-header-right {
                 float: left;
@@ -103,7 +67,7 @@
         <nav class="navbar bg-light fixed-top">
             <div class="container-fluid">
                 <a class="navbar-brand" href="index.html">
-                    <img src="resource/logo/logo-x.png" alt="" width="80" height="30">
+                    <img src="resource/logo/logo-x-white.png" alt="" width="80" height="30">
                 </a>
                 <button class="navbar-toggler navbar-dark" type="button" data-bs-toggle="offcanvas"
                     data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
@@ -207,9 +171,9 @@
         <div class="container-lg">
             <div class="row justify-content-center">
                 <div class="col-10">
-                    <div class="member">
+                    <div class="">
                         <div id="memberIntroduction" style="height: 56px; width:100%;"></div>
-                        <div class="title-text title-text-color">組員介紹</div>
+                        <div class="title-text title-text-color title-border">組員介紹</div>
                         <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
                             <div class="col">
                                 <div class="card h-100">
@@ -287,8 +251,8 @@
                 <div class="col-10">
                     <div class="team">
                         <div id="teamIntroduction" style="height: 56px; width:100%;"></div>
-                        <div class="title-text">團隊介紹</div>
-                        <div class="content-text">
+                        <div class="title-text title-border">團隊介紹</div>
+                        <div class="content-text-color conetnt-text">
                             　　介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字。<br /><br />
                             　　介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字。
                         </div>
