--- a/monzzle/monsters.html
+++ b/monzzle/monsters.html
@@ -10,48 +10,15 @@
     <link rel="stylesheet" href="css/allpage.css">
     <style>
         /* monsters */
-        .content-header {
-            justify-content: space-between;
-            border-bottom: 4px solid #513A35;
-        }
-
-        .form-select{
-            border: 2px solid #513A35;
-            border-radius: 10px;
-        }
-
-        .content-header-icon {
-            width: 45px;
-            height: 45px;
-        }
-
         .content-header-left,
         .content-header-right {
             display: inline-block;
         }
 
         .content-header-right {
-            float: right;
             position: relative;
             top: 8px;
             display: flex;
-        }
-
-        .content-header-title {
-            font-size: 28px;
-            font-weight: bolder;
-            display: inline-block;
-            top: 5px;
-            position: relative;
-        }
-
-        .content-header-item {
-            display: inline-block;
-            font-size: 20px;
-            position: relative;
-            top: 14px;
-            text-decoration: underline;
-            font-weight: bolder;
         }
 
         .content-header-item-mgr {
@@ -102,7 +69,7 @@
         <nav class="navbar bg-light fixed-top">
             <div class="container-fluid">
                 <a class="navbar-brand" href="index.html">
-                    <img src="resource/logo/logo-x.png" alt="" width="80" height="30">
+                    <img src="resource/logo/logo-x-white.png" alt="" width="80" height="30">
                 </a>
                 <button class="navbar-toggler navbar-dark" type="button" data-bs-toggle="offcanvas"
                     data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
@@ -204,11 +171,11 @@
                     <img src="resource/banner/9.jpg" class="img-fluid monster-image">
                 </div>
                 <div class="col-8 col-sm-7 col-md-7">
-                    <div class="monster-name monster-text"></div>
-                    <div class="monster-location monster-text"></div>
-                    <div class="monster-type monster-text"></div>
-                    <div class="monster-mean monster-text"></div>
-                    <div class="monster-data monster-text"></div>
+                    <div class="monster-name monster-text title-text-color"></div>
+                    <div class="monster-location monster-text content-text-color"></div>
+                    <div class="monster-type monster-text content-text-color"></div>
+                    <div class="monster-mean monster-text content-text-color"></div>
+                    <div class="monster-data monster-text content-text-color"></div>
                 </div>
             </div>
         </div>
