--- a/monzzle/subject.html
+++ b/monzzle/subject.html
@@ -10,46 +10,9 @@
     <link rel="stylesheet" href="css/allpage.css">
     <style>
         /* introduction */
-        .content-header {
-            justify-content: space-between;
-            border-bottom: 4px solid #513A35;
-        }
-
-        .concept,
-        .standardtext {
-            border-bottom: 4px solid #513A35;
-            padding-bottom: 20px;
-        }
-
-        .content-header-icon {
-            width: 45px;
-            height: 45px;
-        }
-
         .content-header-left,
         .content-header-right {
             display: inline-block;
-        }
-
-        .content-header-right {
-            float: right;
-        }
-
-        .content-header-title {
-            font-size: 28px;
-            font-weight: bolder;
-            display: inline-block;
-            top: 5px;
-            position: relative;
-        }
-
-        .content-header-item {
-            display: inline-block;
-            font-size: 20px;
-            position: relative;
-            top: 14px;
-            text-decoration: underline;
-            font-weight: bolder;
         }
 
         .content-header-item-mgr {
@@ -106,7 +69,7 @@
         <nav class="navbar bg-light fixed-top">
             <div class="container-fluid">
                 <a class="navbar-brand" href="index.html">
-                    <img src="resource/logo/logo-x.png" alt="" width="80" height="30">
+                    <img src="resource/logo/logo-x-white.png" alt="" width="80" height="30">
                 </a>
                 <button class="navbar-toggler navbar-dark" type="button" data-bs-toggle="offcanvas"
                     data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
@@ -214,7 +177,7 @@
             <div class="row justify-content-center">
                 <div class="col-10">
                     <div id="designConcept" style="height: 56px; width:100%;"></div>
-                    <div class="title-text">設計理念</div>
+                    <div class="title-text title-border">設計理念</div>
                     <div class="concept content-text-color">
                         　　我們是以台灣妖怪為主軸，透過蒐集到的妖怪文獻來進行妖怪的發想與設計，使設計出的妖怪不失原有意涵。<br /><br />
                         　　我們希望消費者可以透過拼拼圖來認識妖怪，在娛樂的過程中進行文化的傳承，讓更多人可以認識台灣的本土文化，而拼圖可以讓消費者獲得莫大的成就感，同時又具有收藏的價值。
@@ -226,9 +189,9 @@
         <div class="container-lg">
             <div class="row justify-content-center">
                 <div class="col-10">
-                    <div class="standardtext content-text-color">
+                    <div class="content-text-color ">
                         <div id="standardText" style="height: 56px; width:100%;"></div>
-                        <div class="title-text">標準字</div>
+                        <div class="title-text title-border">標準字</div>
                         <h1 style="width: 100%;background-color: antiquewhite;padding: 100px 20px;">這是標準字的圖片</h1>
                         　　這是標準字的介紹文字這是標準字的介紹文字這是標準字的介紹文字這是標準字的介紹文字這是標準字的介紹文字這是標準字的介紹文字這是標準字的介紹文字這是標準字的介紹文字。
                     </div>
@@ -239,9 +202,9 @@
         <div class="container-lg">
             <div class="row justify-content-center">
                 <div class="col-10">
-                    <div class="standardcolor content-text-color">
+                    <div class="content-text-color">
                         <div id="standardColor" style="height: 56px; width:100%;"></div>
-                        <div class="title-text">標準色</div>
+                        <div class="title-text title-border">標準色</div>
                         <h1 style="width: 100%;background-color: antiquewhite;padding: 100px 20px;">這是標準色的圖片</h1>
                         　　這是標準色的介紹文字這是標準色的介紹文字這是標準色的介紹文字這是標準色的介紹文字這是標準色的介紹文字這是標準色的介紹文字這是標準色的介紹文字這是標準色的介紹文字。
                     </div>
