--- a/monzzle/index.html
+++ b/monzzle/index.html
@@ -30,13 +30,19 @@
 
         .logo-bg {
             background-color: rgba(244, 235, 215, 1) !important;
-            width: 30%;
-            border-radius: 10%;
+            width: 45%;
+            border-radius: 25px;
+            padding: 20px 30px;
         }
 
         .logo-img {
             width: 100%;
-            
+        }
+
+        @media (max-width:1000px) {
+            .logo-bg {
+                padding: 10px 15px;
+            }
         }
 
         @media (min-width:1000px) {
@@ -59,11 +65,12 @@
 </head>
 
 <body>
+    <!-- <div style="font-size: 60px; font-weight: bolder; position: absolute; background-color: aliceblue; z-index: 500000000000;"id="winSize"></div> -->
     <div class="header">
         <nav class="navbar bg-light fixed-top">
             <div class="container-fluid">
                 <a class="navbar-brand" href="index.html">
-                    <img src="resource/logo/logo-x.png" alt="" width="80" height="30">
+                    <img src="resource/logo/logo-x-white.png" alt="" width="80" height="30">
                 </a>
                 <button class="navbar-toggler navbar-dark" type="button" data-bs-toggle="offcanvas"
                     data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
@@ -142,119 +149,118 @@
             <div class="banner">
                 <div class="banner-mask">
                     <div class="position-absolute top-50 translate-middle position-left logo-bg">
-                        <img src="resource/logo/logo-y.png" alt="" class="logo-img">
+                        <img src="resource/logo/logo-x.png" alt="" class="logo-img">
                     </div>
                 </div>
-            </div>
-        </div>
-    </div>
-
-    <div class="container-lg">
-        <div class="row justify-content-center">
-            <div class="col-11 content-title title-text-color">
-                我們是誰
-            </div>
-            <div class="col-sm-8 col-10 content-text-color">
-                大家好，我們是妖來妖去製作團隊！<br /><br />
-
-                團隊成員透過蒐集台灣妖怪文獻，由文獻發現、創作，繪製出許多精緻且具有文化意涵的妖怪圖片。<br /><br />
-
-                專題包含了此網站及相關產品，如：拼圖、貼圖、明信片...
             </div>
         </div>
 
         <div class="container-lg">
             <div class="row justify-content-center">
-                <div class="col-11 content-title title-text-color">
-                    關於專題
+                <div class="col-10 content-title title-text-color">
+                    我們是誰
                 </div>
-                <div class="col-sm-8 col-10">
-                    <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-                        <div class="carousel-inner">
-                            <div class="carousel-item active">
-                                <img src="resource/carousel/1.jpg" class="d-block w-100" alt="...">
-                            </div>
-                            <div class="carousel-item">
-                                <img src="resource/carousel/2.jpg" class="d-block w-100" alt="...">
-                            </div>
-                            <div class="carousel-item">
-                                <img src="resource/carousel/3.jpg" class="d-block w-100" alt="...">
-                            </div>
-                        </div>
-                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
-                            data-bs-slide="prev">
-                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                            <span class="visually-hidden">Previous</span>
-                        </button>
-                        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
-                            data-bs-slide="next">
-                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                            <span class="visually-hidden">Next</span>
-                        </button>
-                    </div>
+                <div class="col-sm-8 col-10 content-text-color">
+                    大家好，我們是妖來妖去製作團隊！<br /><br />
+
+                    團隊成員透過蒐集台灣妖怪文獻，由文獻發現、創作，繪製出許多精緻且具有文化意涵的妖怪圖片。<br /><br />
+
+                    專題包含了此網站及相關產品，如：拼圖、貼圖、明信片...
                 </div>
             </div>
 
-            <div class="row justify-content-center">
-                <div class="col-11 content-title title-text-color">
-                    我們的商品
-                </div>
-                <div class="col-sm-5 col-10">
-                    <div id="carouselExampleControls2" class="carousel slide" data-bs-ride="carousel">
-                        <div class="carousel-inner">
-                            <div class="carousel-item active">
-                                <img src="resource/carousel/4.jpg" class="d-block w-100" alt="...">
+            <div class="container-lg">
+                <div class="row justify-content-center">
+                    <div class="col-10 content-title title-text-color">
+                        關於專題
+                    </div>
+                    <div class="col-sm-8 col-10">
+                        <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+                            <div class="carousel-inner">
+                                <div class="carousel-item active">
+                                    <img src="resource/carousel/1.jpg" class="d-block w-100" alt="...">
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="resource/carousel/2.jpg" class="d-block w-100" alt="...">
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="resource/carousel/3.jpg" class="d-block w-100" alt="...">
+                                </div>
                             </div>
-                            <div class="carousel-item">
-                                <img src="resource/carousel/5.jpg" class="d-block w-100" alt="...">
-                            </div>
-                            <div class="carousel-item">
-                                <img src="resource/carousel/6.jpg" class="d-block w-100" alt="...">
-                            </div>
+                            <button class="carousel-control-prev" type="button"
+                                data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+                                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                <span class="visually-hidden">Previous</span>
+                            </button>
+                            <button class="carousel-control-next" type="button"
+                                data-bs-target="#carouselExampleControls" data-bs-slide="next">
+                                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                <span class="visually-hidden">Next</span>
+                            </button>
                         </div>
-                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls2"
-                            data-bs-slide="prev">
-                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                            <span class="visually-hidden">Previous</span>
-                        </button>
-                        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls2"
-                            data-bs-slide="next">
-                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                            <span class="visually-hidden">Next</span>
-                        </button>
                     </div>
                 </div>
 
-                <div class="col-sm-5 col-10">
-                    <div id="carouselExampleControls3" class="carousel slide" data-bs-ride="carousel">
-                        <div class="carousel-inner">
-                            <div class="carousel-item active">
-                                <img src="resource/carousel/7.jpg" class="d-block w-100" alt="...">
+                <div class="row justify-content-center">
+                    <div class="col-10 content-title title-text-color">
+                        我們的商品
+                    </div>
+                    <div class="col-sm-5 col-10">
+                        <div id="carouselExampleControls2" class="carousel slide" data-bs-ride="carousel">
+                            <div class="carousel-inner">
+                                <div class="carousel-item active">
+                                    <img src="resource/carousel/4.jpg" class="d-block w-100" alt="...">
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="resource/carousel/5.jpg" class="d-block w-100" alt="...">
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="resource/carousel/6.jpg" class="d-block w-100" alt="...">
+                                </div>
                             </div>
-                            <div class="carousel-item">
-                                <img src="resource/carousel/8.jpg" class="d-block w-100" alt="...">
-                            </div>
-                            <div class="carousel-item">
-                                <img src="resource/carousel/9.jpg" class="d-block w-100" alt="...">
-                            </div>
+                            <button class="carousel-control-prev" type="button"
+                                data-bs-target="#carouselExampleControls2" data-bs-slide="prev">
+                                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                <span class="visually-hidden">Previous</span>
+                            </button>
+                            <button class="carousel-control-next" type="button"
+                                data-bs-target="#carouselExampleControls2" data-bs-slide="next">
+                                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                <span class="visually-hidden">Next</span>
+                            </button>
                         </div>
-                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls3"
-                            data-bs-slide="prev">
-                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                            <span class="visually-hidden">Previous</span>
-                        </button>
-                        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls3"
-                            data-bs-slide="next">
-                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                            <span class="visually-hidden">Next</span>
-                        </button>
+                    </div>
+
+                    <div class="col-sm-5 col-10">
+                        <div id="carouselExampleControls3" class="carousel slide" data-bs-ride="carousel">
+                            <div class="carousel-inner">
+                                <div class="carousel-item active">
+                                    <img src="resource/carousel/7.jpg" class="d-block w-100" alt="...">
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="resource/carousel/8.jpg" class="d-block w-100" alt="...">
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="resource/carousel/9.jpg" class="d-block w-100" alt="...">
+                                </div>
+                            </div>
+                            <button class="carousel-control-prev" type="button"
+                                data-bs-target="#carouselExampleControls3" data-bs-slide="prev">
+                                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                <span class="visually-hidden">Previous</span>
+                            </button>
+                            <button class="carousel-control-next" type="button"
+                                data-bs-target="#carouselExampleControls3" data-bs-slide="next">
+                                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                <span class="visually-hidden">Next</span>
+                            </button>
+                        </div>
                     </div>
                 </div>
+
             </div>
 
         </div>
-
-    </div>
     </div>
 
     <div class="footer">
@@ -281,8 +287,38 @@
         $(document).ready(function () {
             let bannerInt = getRandomInt(9);
             setBanner(bannerInt);
+            logoSetting();
         });
 
+        $(window).on('resize', function () {
+            logoSetting();
+        });
+
+        function logoSetting() {
+            let winWidth = $(window).width();
+            let winHeight = $(window).height();
+
+            let bannerHeight = $('.banner').height();
+            let logoHeight = $('.logo-img').height();
+
+            // $('#winSize').text(winWidth);
+
+            if ((winWidth) < 985) {
+                $('.logo-img').attr('src', 'resource/logo/logo-y.png');
+            } else {
+                $('.logo-img').attr('src', 'resource/logo/logo-x.png');
+            }
+
+            if (logoHeight > (bannerHeight - 100)) {
+                $('.banner').height(logoHeight + 200);
+                $('.logo-bg').css('margin-top', 150)
+            }
+            else {
+                $('.banner').css('height', 'calc(96vh - 56px)')
+                $('.logo-bg').css('margin-top', 0)
+            }
+
+        }
 
 
         function getRandomInt(max) {
