--- a/monzzle/introduction.html
+++ b/monzzle/introduction.html
@@ -42,18 +42,6 @@
             border: 0
         }
 
-        @media (max-width:560px) {
-            .content-header-right {
-                float: left;
-                width: 100%;
-            }
-
-            .content-header-item {
-                top: 0;
-            }
-
-        }
-
         .title-text{
             font-size: 25px;
         }
@@ -179,11 +167,11 @@
                                 <div class="card h-100">
                                     <img src="resource/carousel/2.jpg" class="card-img-top">
                                     <div class="card-body">
-                                        <h5 class="card-title">組員1</h5>
+                                        <h5 class="card-title">朱恩彤</h5>
                                         <p class="card-text">
-                                            個性：<br />
-                                            專長：<br />
-                                            工作內容：<br />
+                                            個性：外向、講好笑的話<br />
+                                            專長：畫插圖、英文<br />
+                                            工作內容：妖怪&地圖底色上色、名牌設計​<br />
                                         </p>
                                     </div>
                                 </div>
@@ -192,11 +180,11 @@
                                 <div class="card h-100">
                                     <img src="resource/carousel/3.jpg" class="card-img-top">
                                     <div class="card-body">
-                                        <h5 class="card-title">組員2</h5>
+                                        <h5 class="card-title">鄧宇秀</h5>
                                         <p class="card-text">
-                                            個性：<br />
-                                            專長：<br />
-                                            工作內容：<br />
+                                            個性：外冷內熱、笑點低<br />
+                                            專長：繪圖、彈吉他​<br />
+                                            工作內容：標準字設計、妖怪角色&地圖明暗繪製​<br />
                                         </p>
                                     </div>
                                 </div>
@@ -205,11 +193,11 @@
                                 <div class="card h-100">
                                     <img src="resource/carousel/4.jpg" class="card-img-top">
                                     <div class="card-body">
-                                        <h5 class="card-title">組員3</h5>
+                                        <h5 class="card-title">何嘉欣</h5>
                                         <p class="card-text">
-                                            個性：<br />
-                                            專長：<br />
-                                            工作內容：<br />
+                                            個性：慢熟、笑點奇低​<br />
+                                            專長：繪畫、設計​<br />
+                                            工作內容：妖怪&地圖草圖設計、地圖精修​<br />
                                         </p>
                                     </div>
                                 </div>
@@ -218,11 +206,11 @@
                                 <div class="card h-100">
                                     <img src="resource/carousel/5.jpg" class="card-img-top">
                                     <div class="card-body">
-                                        <h5 class="card-title">組員4</h5>
+                                        <h5 class="card-title">林采辰</h5>
                                         <p class="card-text">
-                                            個性：<br />
-                                            專長：<br />
-                                            工作內容：<br />
+                                            個性：自由奔放、挑戰自我<br />
+                                            專長：插畫、手作、烘焙​<br />
+                                            工作內容：圖鑑排版、元素設計<br />
                                         </p>
                                     </div>
                                 </div>
@@ -231,11 +219,11 @@
                                 <div class="card h-100">
                                     <img src="resource/carousel/6.jpg" class="card-img-top">
                                     <div class="card-body">
-                                        <h5 class="card-title">組員5</h5>
+                                        <h5 class="card-title">吳彥呈</h5>
                                         <p class="card-text">
-                                            個性：<br />
-                                            專長：<br />
-                                            工作內容：<br />
+                                            個性：宅、陰沉<br />
+                                            專長：寫程式、設計軟體​<br />
+                                            工作內容：網頁製作、企劃書撰寫<br />
                                         </p>
                                     </div>
                                 </div>
