--- a/monzzle/shop.html
+++ b/monzzle/shop.html
@@ -40,6 +40,10 @@
             padding: 10px 0;
         }
 
+        .form-select {
+            width: 150px;
+        }
+
 
         /* allpage */
     </style>
