--- a/monzzle/index.html
+++ b/monzzle/index.html
@@ -149,7 +149,7 @@
             <div class="banner">
                 <div class="banner-mask">
                     <div class="position-absolute top-50 translate-middle position-left logo-bg">
-                        <img src="resource/logo/logo-x.png" alt="" class="logo-img">
+                        <img src="resource/logo/logo-x.jpg" alt="" class="logo-img">
                     </div>
                 </div>
             </div>
@@ -304,9 +304,9 @@
             // $('#winSize').text(winWidth);
 
             if ((winWidth) < 985) {
-                $('.logo-img').attr('src', 'resource/logo/logo-y.png');
+                $('.logo-img').attr('src', 'resource/logo/logo-y.jpg');
             } else {
-                $('.logo-img').attr('src', 'resource/logo/logo-x.png');
+                $('.logo-img').attr('src', 'resource/logo/logo-x.jpg');
             }
 
             if (logoHeight > (bannerHeight - 100)) {
