--- a/monzzle/monsters.html
+++ b/monzzle/monsters.html
@@ -52,6 +52,9 @@
             margin-top: 10px;
         }
 
+        .monster-image{
+            margin: 20px 0;
+        }
         /* allpage */
     </style>
 </head>
@@ -159,10 +162,10 @@
                 </div>
             </div>
             <div class="row justify-content-center">
-                <div class="col-8 col-sm-6 col-md-7 monster-content">
+                <div class="col-8 col-sm-7 col-md-5 monster-content">
                     <img src="resource/banner/9.jpg" class="img-fluid monster-image">
                 </div>
-                <div class="col-8 col-sm-7 col-md-7">
+                <div class="col-8 col-sm-7 col-md-9">
                     <div class="monster-name monster-text title-text-color"></div>
                     <div class="monster-location monster-text content-text-color"></div>
                     <div class="monster-type monster-text content-text-color"></div>
