--- a/monzzle/index.html
+++ b/monzzle/index.html
@@ -60,6 +60,13 @@
             color: #513A35;
         }
 
+        .content-text{
+            font-size: 20px;
+        }
+        .content{
+            margin: 40px 0;
+        }
+
         /* allpage */
     </style>
 </head>
@@ -156,11 +163,11 @@
         </div>
 
         <div class="container-lg">
-            <div class="row justify-content-center">
+            <div class="row justify-content-center content">
                 <div class="col-10 content-title title-text-color">
                     我們是誰
                 </div>
-                <div class="col-sm-8 col-10 content-text-color">
+                <div class="col-sm-8 col-10 content-text-color content-text">
                     大家好，我們是妖來妖去製作團隊！<br /><br />
 
                     團隊成員透過蒐集台灣妖怪文獻，由文獻發現、創作，繪製出許多精緻且具有文化意涵的妖怪圖片。<br /><br />
@@ -170,7 +177,7 @@
             </div>
 
             <div class="container-lg">
-                <div class="row justify-content-center">
+                <div class="row justify-content-center content">
                     <div class="col-10 content-title title-text-color">
                         關於專題
                     </div>
@@ -178,13 +185,19 @@
                         <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                             <div class="carousel-inner">
                                 <div class="carousel-item active">
-                                    <img src="resource/carousel/1.jpg" class="d-block w-100" alt="...">
+                                    <a href="subject.html">
+                                        <img src="resource/carousel/1.jpg" class="d-block w-100" alt="...">
+                                    </a>
                                 </div>
                                 <div class="carousel-item">
-                                    <img src="resource/carousel/2.jpg" class="d-block w-100" alt="...">
+                                    <a href="subject.html">
+                                        <img src="resource/carousel/2.jpg" class="d-block w-100" alt="...">
+                                    </a>
                                 </div>
                                 <div class="carousel-item">
-                                    <img src="resource/carousel/3.jpg" class="d-block w-100" alt="...">
+                                    <a href="subject.html">
+                                        <img src="resource/carousel/3.jpg" class="d-block w-100" alt="...">
+                                    </a>
                                 </div>
                             </div>
                             <button class="carousel-control-prev" type="button"
@@ -201,7 +214,7 @@
                     </div>
                 </div>
 
-                <div class="row justify-content-center">
+                <div class="row justify-content-center content">
                     <div class="col-10 content-title title-text-color">
                         我們的商品
                     </div>
@@ -209,13 +222,19 @@
                         <div id="carouselExampleControls2" class="carousel slide" data-bs-ride="carousel">
                             <div class="carousel-inner">
                                 <div class="carousel-item active">
-                                    <img src="resource/carousel/4.jpg" class="d-block w-100" alt="...">
+                                    <a href="shop.html">
+                                        <img src="resource/carousel/4.jpg" class="d-block w-100" alt="...">
+                                    </a>
                                 </div>
                                 <div class="carousel-item">
-                                    <img src="resource/carousel/5.jpg" class="d-block w-100" alt="...">
+                                    <a href="shop.html">
+                                        <img src="resource/carousel/5.jpg" class="d-block w-100" alt="...">
+                                    </a>
                                 </div>
                                 <div class="carousel-item">
-                                    <img src="resource/carousel/6.jpg" class="d-block w-100" alt="...">
+                                    <a href="shop.html">
+                                        <img src="resource/carousel/6.jpg" class="d-block w-100" alt="...">
+                                    </a>
                                 </div>
                             </div>
                             <button class="carousel-control-prev" type="button"
@@ -235,13 +254,19 @@
                         <div id="carouselExampleControls3" class="carousel slide" data-bs-ride="carousel">
                             <div class="carousel-inner">
                                 <div class="carousel-item active">
-                                    <img src="resource/carousel/7.jpg" class="d-block w-100" alt="...">
+                                    <a href="shop.html">
+                                        <img src="resource/carousel/7.jpg" class="d-block w-100" alt="...">
+                                    </a>
                                 </div>
                                 <div class="carousel-item">
-                                    <img src="resource/carousel/8.jpg" class="d-block w-100" alt="...">
+                                    <a href="shop.html">
+                                        <img src="resource/carousel/8.jpg" class="d-block w-100" alt="...">
+                                    </a>
                                 </div>
                                 <div class="carousel-item">
-                                    <img src="resource/carousel/9.jpg" class="d-block w-100" alt="...">
+                                    <a href="shop.html">
+                                        <img src="resource/carousel/9.jpg" class="d-block w-100" alt="...">
+                                    </a>
                                 </div>
                             </div>
                             <button class="carousel-control-prev" type="button"
