--- a/monzzle/subject.html
+++ b/monzzle/subject.html
@@ -48,6 +48,10 @@
             border: 0
         }
 
+        .subject-img{
+            margin-bottom: 20px;
+        }
+
         /* allpage */
     </style>
 </head>
@@ -180,8 +184,15 @@
                     <div class="content-text-color ">
                         <div id="standardText" style="height: 56px; width:100%;"></div>
                         <div class="title-text title-border">標準字</div>
-                        <h1 style="width: 100%;background-color: antiquewhite;padding: 100px 20px;">這是標準字的圖片</h1>
-                        　　這是標準字的介紹文字這是標準字的介紹文字這是標準字的介紹文字這是標準字的介紹文字這是標準字的介紹文字這是標準字的介紹文字這是標準字的介紹文字這是標準字的介紹文字。
+
+                        <div class="row justify-content-center">
+                            <div class="col-10">
+                                <img src="resource/subject/text.jpg" class="img-fluid subject-img" alt="">
+                            </div>
+                        </div>
+
+                        　　「妖來妖去」帶有一種動態感，​除了象徵妖怪的活潑，​也帶出妖怪無拘無束，無處不在的形象。​字體後方的煙霧元素增加一絲神祕感，​其中「妖」字中的橘點就像妖怪在偷看。​<br />​<br />
+                        　　而英文「XX MONZZLE」的XX是羅馬數字20，​代表著我們的20隻妖怪，​而MONZZLE是monster與puzzle的結合，​意味著妖怪與拼圖。
                     </div>
                 </div>
             </div>
@@ -193,8 +204,15 @@
                     <div class="content-text-color">
                         <div id="standardColor" style="height: 56px; width:100%;"></div>
                         <div class="title-text title-border">標準色</div>
-                        <h1 style="width: 100%;background-color: antiquewhite;padding: 100px 20px;">這是標準色的圖片</h1>
-                        　　這是標準色的介紹文字這是標準色的介紹文字這是標準色的介紹文字這是標準色的介紹文字這是標準色的介紹文字這是標準色的介紹文字這是標準色的介紹文字這是標準色的介紹文字。
+
+                        <div class="row justify-content-center">
+                            <div class="col-10">
+                                <img src="resource/subject/color.jpg" class="img-fluid subject-img" alt="">
+                            </div>
+                        </div>
+
+                        　　以古樸的紅褐色搭配自然的藍綠色，​帶出悠久的年代。​<br />​<br />
+                        　　藍綠色象徵天空與海洋合而為一，​紅褐色象徵大地與鄉村風情，​從而表達「處處皆妖怪」的意味。​
                     </div>
                 </div>
             </div>
