--- a/monzzle/subject.html
+++ b/monzzle/subject.html
@@ -29,7 +29,7 @@
             width: 100%;
             background-size: cover;
             background-position: center center;
-            background-image: url('resource/carousel/5.jpg');
+            background-image: url('resource/banner/banner2.jpg');
             margin: 30px 0 0 0;
         }
 
