--- a/monzzle/introduction.html
+++ b/monzzle/introduction.html
@@ -29,7 +29,7 @@
             width: 100%;
             background-size: cover;
             background-position: center center;
-            background-image: url('resource/carousel/1.jpg');
+            background-image: url('resource/members/0.jpg');
             margin: 30px 0 0 0;
         }
 
@@ -165,7 +165,7 @@
                         <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
                             <div class="col">
                                 <div class="card h-100">
-                                    <img src="resource/carousel/2.jpg" class="card-img-top">
+                                    <img src="resource/members/1.jpg" class="card-img-top">
                                     <div class="card-body">
                                         <h5 class="card-title">朱恩彤</h5>
                                         <p class="card-text">
@@ -178,7 +178,7 @@
                             </div>
                             <div class="col">
                                 <div class="card h-100">
-                                    <img src="resource/carousel/3.jpg" class="card-img-top">
+                                    <img src="resource/members/2.jpg" class="card-img-top">
                                     <div class="card-body">
                                         <h5 class="card-title">鄧宇秀</h5>
                                         <p class="card-text">
@@ -191,7 +191,7 @@
                             </div>
                             <div class="col">
                                 <div class="card h-100">
-                                    <img src="resource/carousel/4.jpg" class="card-img-top">
+                                    <img src="resource/members/3.jpg" class="card-img-top">
                                     <div class="card-body">
                                         <h5 class="card-title">何嘉欣</h5>
                                         <p class="card-text">
@@ -204,7 +204,7 @@
                             </div>
                             <div class="col">
                                 <div class="card h-100">
-                                    <img src="resource/carousel/5.jpg" class="card-img-top">
+                                    <img src="resource/members/4.jpg" class="card-img-top">
                                     <div class="card-body">
                                         <h5 class="card-title">林采辰</h5>
                                         <p class="card-text">
@@ -217,7 +217,7 @@
                             </div>
                             <div class="col">
                                 <div class="card h-100">
-                                    <img src="resource/carousel/6.jpg" class="card-img-top">
+                                    <img src="resource/members/5.jpg" class="card-img-top">
                                     <div class="card-body">
                                         <h5 class="card-title">吳彥呈</h5>
                                         <p class="card-text">
