--- a/monzzle/subject.html
+++ b/monzzle/subject.html
@@ -48,9 +48,10 @@
             border: 0
         }
 
-        .subject-img{
+        .subject-img {
             margin-bottom: 20px;
         }
+
 
         /* allpage */
     </style>
@@ -145,7 +146,7 @@
                     </div>
                     <div class="content-header-right">
                         <a href="#designConcept">
-                            <div class="content-header-item content-header-item-mgr title-text-color">設計理念</div>
+                            <div class="content-header-item content-header-item-mgr title-text-color">妖怪的起源</div>
                         </a>
                         <a href="#standardText">
                             <div class="content-header-item content-header-item-mgr title-text-color">標準字</div>
@@ -169,10 +170,13 @@
             <div class="row justify-content-center">
                 <div class="col-10">
                     <div id="designConcept" style="height: 56px; width:100%;"></div>
-                    <div class="title-text title-border">設計理念</div>
-                    <div class="concept content-text-color">
-                        　　我們是以台灣妖怪為主軸，透過蒐集到的妖怪文獻來進行妖怪的發想與設計，使設計出的妖怪不失原有意涵。<br /><br />
-                        　　我們希望消費者可以透過拼拼圖來認識妖怪，在娛樂的過程中進行文化的傳承，讓更多人可以認識台灣的本土文化，而拼圖可以讓消費者獲得莫大的成就感，同時又具有收藏的價值。
+                    <div class="title-text title-border">妖怪的起源</div>
+                    <div class="concept content-text-color conetnt-padding">
+                        在參考的書目中，內容大致分為三個時代-大航海時代、明清時代、日本時代，於是我們先將其分成神界、陸海空及原住民三大類做篩選。​<br /><br />
+                        最終經討論決定以陸海空分類作為主軸，將三個時代的海境、山野、鄉里等地區妖怪搜集和篩選，從百隻以上的妖怪中，選出較具經典故事的20隻妖怪角色，並根據風格定位開始繪製我們的妖怪。<br /><br /><br />
+
+                        我們透過蒐集來妖怪的資料，與網路上的參考資料，最終將可愛、怪奇、夢幻作為我們的風格，並以微寫實、插畫風來表現。<br /><br />
+                        以擬人的手法設計妖怪，除了讓妖怪形象看起來更有親和力，也能讓妖怪特色在人形上更生動豐富。
                     </div>
                 </div>
             </div>
@@ -191,8 +195,8 @@
                             </div>
                         </div>
 
-                        　　「妖來妖去」帶有一種動態感，​除了象徵妖怪的活潑，​也帶出妖怪無拘無束，無處不在的形象。​字體後方的煙霧元素增加一絲神祕感，​其中「妖」字中的橘點就像妖怪在偷看。​<br />​<br />
-                        　　而英文「XX MONZZLE」的XX是羅馬數字20，​代表著我們的20隻妖怪，​而MONZZLE是monster與puzzle的結合，​意味著妖怪與拼圖。
+                        「妖來妖去」帶有一種動態感，​除了象徵妖怪的活潑，​也帶出妖怪無拘無束，無處不在的形象。​字體後方的煙霧元素增加一絲神祕感，​其中「妖」字中的橘點就像妖怪在偷看。​<br />​<br />
+                        而英文「XX MONZZLE」的XX是羅馬數字20，​代表著我們的20隻妖怪，​而MONZZLE是monster與puzzle的結合，​意味著妖怪與拼圖。
                     </div>
                 </div>
             </div>
@@ -211,8 +215,8 @@
                             </div>
                         </div>
 
-                        　　以古樸的紅褐色搭配自然的藍綠色，​帶出悠久的年代。​<br />​<br />
-                        　　藍綠色象徵天空與海洋合而為一，​紅褐色象徵大地與鄉村風情，​從而表達「處處皆妖怪」的意味。​
+                        以古樸的紅褐色搭配自然的藍綠色，​帶出悠久的年代。​<br />​<br />
+                        藍綠色象徵天空與海洋合而為一，​紅褐色象徵大地與鄉村風情，​從而表達「處處皆妖怪」的意味。​
                     </div>
                 </div>
             </div>
