--- a/monzzle/index.html
+++ b/monzzle/index.html
@@ -69,10 +69,12 @@
             margin: 40px 0;
         }
 
-        .content-hover:hover{
+        .content-hover:hover {
             color: #805F55;
         }
+
         
+
         /* allpage */
     </style>
 </head>
@@ -173,16 +175,15 @@
                 <div class="col-10 content-title title-text-color">
                     關於我們
                 </div>
-
                 <div class="col-10 content-text-color content-text">
                     <a href="introduction.html" class="content-text-color content-hover">
-                        在各國都有不同的妖怪文化，而在「台灣」也有本土特有的妖怪，妖怪的誕生，源自於人類的想像力，也如同一面鏡子，反映出人們對大自然的恐懼，或對社會、族群命運的一種假想。​​<br /><br />
+                        妖怪的誕生，源自於人類的想像力，也如同一面鏡子，反映出人們對大自然的恐懼，或對社會、族群命運的一種假想。<br /><br />
+                        <span
+                            style="color: #513A35;font-weight: bolder; border-bottom: #513A35 3px solid;">人們害怕妖怪作祟，那為何還是要述說令人恐懼的妖怪傳說呢？</span><br /><br />
+                        因為，妖怪也代表著「善意的提醒」，有時是為了傳遞道德教訓或教導人們如何趨吉避凶。<br /><br />
+                        為了能夠觸及廣泛客群，我們決定以台灣妖怪結合拼圖來呈現，讓消費者在遊玩過程中，能進一步了解台灣妖怪文化。
 
-                        人們都害怕妖怪作祟，那為何人們還是要述說讓人害怕的妖怪傳說，這是因為，妖怪也代表著「善意的提醒」，有時是為了傳遞道德教訓，有時為了教導人們如何趨吉避凶，因此，我們以台灣妖怪為主題，是為了讓消費者可以在遊玩拼圖的過程中，達到文化傳承的目的。​<br /><br />
 
-                        以「妖來妖去」作為主題名稱，用台語的念法來體現獨有的台灣味道，其諧音「搖來搖去」，展現出妖怪活潑生動的特質，和日常生活中處處充斥著妖怪的身影。​<br /><br />
-
-                        現今緊湊的生活中，人們無法放慢自己的步調，因此，我們以拼圖作為出發點，讓消費者可以停下腳步，一點一滴地拼湊出精美的圖畫，也會獲得莫大的成就感。
                     </a>
                 </div>
             </div>
