--- a/monzzle/subject.html
+++ b/monzzle/subject.html
@@ -53,6 +53,8 @@
         }
 
 
+
+
         /* allpage */
     </style>
 </head>
@@ -171,12 +173,12 @@
                 <div class="col-10">
                     <div id="designConcept" style="height: 56px; width:100%;"></div>
                     <div class="title-text title-border">妖怪的起源</div>
-                    <div class="concept content-text-color conetnt-padding">
+                    <div class="concept content-text-color conetnt-padding content-text">
                         在參考的書目中，內容大致分為三個時代-大航海時代、明清時代、日本時代，於是我們先將其分成神界、陸海空及原住民三大類做篩選。​<br /><br />
-                        最終經討論決定以陸海空分類作為主軸，將三個時代的海境、山野、鄉里等地區妖怪搜集和篩選，從百隻以上的妖怪中，選出較具經典故事的20隻妖怪角色，並根據風格定位開始繪製我們的妖怪。<br /><br /><br />
 
-                        我們透過蒐集來妖怪的資料，與網路上的參考資料，最終將可愛、怪奇、夢幻作為我們的風格，並以微寫實、插畫風來表現。<br /><br />
-                        以擬人的手法設計妖怪，除了讓妖怪形象看起來更有親和力，也能讓妖怪特色在人形上更生動豐富。
+                        考量資料的明確性，我們先刪除了典故與地理位置不明的，再依據資料詳細度與熟悉性高，最終篩選出20隻妖怪。<br /><br />
+
+                        妖怪的傳說有向正向良善的典故，也有負面警惕的典故，例如：正面的制風龜、負面的金魅。
                     </div>
                 </div>
             </div>
@@ -185,18 +187,18 @@
         <div class="container-lg">
             <div class="row justify-content-center">
                 <div class="col-10">
-                    <div class="content-text-color ">
+                    <div>
                         <div id="standardText" style="height: 56px; width:100%;"></div>
                         <div class="title-text title-border">標準字</div>
-
                         <div class="row justify-content-center">
                             <div class="col-10">
                                 <img src="resource/subject/text.jpg" class="img-fluid subject-img" alt="">
                             </div>
                         </div>
-
-                        「妖來妖去」帶有一種動態感，​除了象徵妖怪的活潑，​也帶出妖怪無拘無束，無處不在的形象。​字體後方的煙霧元素增加一絲神祕感，​其中「妖」字中的橘點就像妖怪在偷看。​<br />​<br />
-                        而英文「XX MONZZLE」的XX是羅馬數字20，​代表著我們的20隻妖怪，​而MONZZLE是monster與puzzle的結合，​意味著妖怪與拼圖。
+                        <div class="content-text-color content-text">
+                            「妖來妖去」帶有一種動態感，​除了象徵妖怪的活潑，​也帶出妖怪無拘無束，無處不在的形象。​字體後方的煙霧元素增加一絲神祕感，​其中「妖」字中的橘點就像妖怪在偷看。​<br />​<br />
+                            而英文「XX MONZZLE」的XX是羅馬數字20，​代表著我們的20隻妖怪，​而MONZZLE是monster與puzzle的結合，​意味著妖怪與拼圖。
+                        </div>
                     </div>
                 </div>
             </div>
@@ -205,7 +207,7 @@
         <div class="container-lg">
             <div class="row justify-content-center">
                 <div class="col-10">
-                    <div class="content-text-color">
+                    <div>
                         <div id="standardColor" style="height: 56px; width:100%;"></div>
                         <div class="title-text title-border">標準色</div>
 
@@ -214,13 +216,39 @@
                                 <img src="resource/subject/color.jpg" class="img-fluid subject-img" alt="">
                             </div>
                         </div>
-
-                        以古樸的紅褐色搭配自然的藍綠色，​帶出悠久的年代。​<br />​<br />
-                        藍綠色象徵天空與海洋合而為一，​紅褐色象徵大地與鄉村風情，​從而表達「處處皆妖怪」的意味。​
+                        <div class="content-text-color content-text">
+                            以古樸的紅褐色搭配自然的藍綠色，​帶出悠久的年代。​<br />​<br />
+                            藍綠色象徵天空與海洋合而為一，​紅褐色象徵大地與鄉村風情，​從而表達「處處皆妖怪」的意味。​
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
+
+        <div class="container-lg">
+            <div class="row justify-content-center">
+                <div class="col-10">
+                    <div>
+                        <div id="standardColor" style="height: 56px; width:100%;"></div>
+                        <div class="title-text title-border">妖怪設計</div>
+
+                        <div class="row justify-content-center">
+                            <div class="col-10">
+                                <img src="" class="img-fluid subject-img" alt="">
+                            </div>
+                        </div>
+                        <div class="content-text-color content-text">
+                            我們透過蒐集來妖怪的資料，與網路上的參考資料，最終將可愛、怪奇、夢幻作為我們的風格，並以微寫實、插畫風來表現。<br /><br />
+
+                            以擬人的手法設計妖怪，除了讓妖怪形象看起來更有親和力，也能讓妖怪特色在人形上更生動豐富。
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+
 
 
         <div class="footer">
