--- a/monzzle/introduction.html
+++ b/monzzle/introduction.html
@@ -42,8 +42,19 @@
             border: 0
         }
 
-        .title-text{
+        .title-text {
             font-size: 25px;
+        }
+
+        .content-text-focus {
+            font-size: 22px;
+            font-weight: bolder;
+        }
+
+        @media (min-width:600px) {
+            .content-text-focus {
+                font-size: 20px;
+            }
         }
 
         /* allpage */
@@ -242,7 +253,7 @@
                         <div class="title-text title-border">團隊介紹</div>
                         <div class="content-text-color conetnt-text">
                             我們是一群因緣際會下聚在一起的人，團隊總計五人，每個人都有不同的特質與個性，發揮各自的專長，負責不同的工作內容，過程中有爭吵也有歡笑，雖然每周都在趕進度，燃燒肝臟燃燒生命。<br /><br />
-                            <span style="font-size: 20px; font-weight: bolder;">團隊座右銘：不要問我(的肝)為什麼這麼黑，因為我不想白活一輩子。</span>
+                            <span class="content-text-focus">團隊座右銘：不要問我（的肝）為什麼這麼黑，因為我不想白活一輩子。</span>
                         </div>
                     </div>
                 </div>
